<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EatFlix</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="Login">Login</string>
    <string name="title_activity_restaurant">Restaurants</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_restaurant">Add Restaurant</string>
    <!-- Add Restaurant strings -->
    <string name="restaurant_name_hint">Restaurant</string>
    <string name="email_hint">Email</string>
    <string name="postcode_hint">Postcode</string>
    <string name="telephone_hint">Telephone</string>
    <string name="address_hint">Address</string>
    <string name="about_hint">About us</string>
    <string name="type_hint">Type</string>
    <string name="search_hint">Type</string>
    <!--  -->
    <string-array name="type_arrays">
        <item>Select type</item>
        <item>Restaurant</item>
        <item>Bar</item>
        <item>Pub</item>
    </string-array>
    <string-array name="type_cuisine">
        <item>Select cuisine type</item>
        <item>American</item>
        <item>Indian</item>
        <item>Portuguese</item>
    </string-array>
    <string-array name="cat_names">
        <item>George</item>
        <item>Zubin</item>
        <item>Carlos</item>
        <item>Frank</item>
        <item>Charles</item>
        <item>Simon</item>
        <item>Fezra</item>
        <item>Henry</item>
        <item>Schuster</item>
    </string-array>
‏                                <!--  -->

    <string name="reviews_header">Reviews</string>
    <string name="profile_header">My Profile</string>
    <string name="account_header">My Account</string>
    <string name="restaurant_list_header">Restaurants Lists</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="first_name_text">First Name</string>
    <string name="email_text">Email</string>
    <string name="last_name_text">Last Name</string>
    <string name="go_to_login_text"> Already have an account? Login</string>
    <string name="restaurant_registration_msg">Add Restaurant</string>
    <string name="town_hint">Town</string>
    <string name="desc_hint">Description</string>
    <string name="title_activity_splash">EatFlix</string>
    <string name="title_activity_new_review">NewReviewActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Register Activity -->
    <string name="title_activity_register">Register</string>
    <string name="attach_image">Attach Image</string>
    <string name="register">Register</string>
    <string name="sendto">Share with</string>
    <string name="details">Enter your review here</string>
    <string name="title_activity_map">Restaurants</string>
    <string name="map_launcher_text">Map View</string>
    <string name="list_launcher_text">List View</string>
    <string name="title_activity_near_me">NearMe</string>
    <string name="title_activity_near_places">Nearby</string>
    <string name="title_activity_single_place">SinglePlaceActivity</string>

</resources>
