<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.melvin.apps.materialtests.RestaurantActivity">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <EditText android:id="@+id/name_edit_text"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/restaurant_name_hint"
            android:textColorHint="@color/ControlText"
            style="@style/AppTheme"
            />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/widget_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_margin">


        <EditText android:id="@+id/email_edit_text"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:hint="@string/email_hint"
            android:textColorHint="@color/ControlText"
            style="@style/AppTheme"
            />
        </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/widget_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_margin">

        <EditText android:id="@+id/telephone_edit_text"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:hint="@string/telephone_hint"
            android:textColorHint="@color/ControlText"
            style="@style/AppTheme"
            />
</LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/widget_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_margin">

        <EditText android:id="@+id/postcode_edit_text"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:hint="@string/postcode_hint"
            android:textColorHint="@color/ControlText"
            style="@style/AppTheme"
            />


</LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/widget_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_margin">

        <EditText android:id="@+id/address_edit_text"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:hint="@string/address_hint"
            android:textColorHint="@color/ControlText"
            style="@style/AppTheme"
            />
</LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/widget_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_margin">


        <EditText android:id="@+id/town"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/town_hint"
            android:textColorHint="@color/ControlText"
            style="@style/AppTheme"
            />
</LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/widget_horizontal_margin"
            android:layout_marginTop="@dimen/widget_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <!--<TextView-->
                <!--android:id="@+id/constant_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginBottom="0dp"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="#C0C0C0"-->
                <!--android:text="INR"-->
                <!--android:background="@android:color/transparent" />-->
            <EditText android:id="@+id/description"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:hint="@string/desc_hint"
                android:textColorHint="@color/ControlText"
                style="@style/AppTheme"
                />
        </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/widget_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_margin">
        <Spinner
            android:id="@+id/type_spinner"
            android:spinnerMode="dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type_arrays"
            android:prompt="@string/type_hint"
            android:layout_weight="100"
            style="@style/AppTheme"
            />
        <Spinner
            android:id="@+id/type_cuisine"
            android:spinnerMode="dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type_cuisine"
            android:prompt="@string/type_hint"
            android:layout_weight="100"
            style="@style/AppTheme"
            />
</LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/widget_horizontal_margin"
        android:layout_marginTop="@dimen/widget_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_text_view"
            style="@style/AppTheme" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/widget_horizontal_margin"
            android:layout_marginTop="@dimen/widget_vertical_margin">

        <Button
            android:layout_width="153dp"
            android:layout_height="56dp"
            android:id="@+id/sub_btn"
            android:text="@string/cancel_text"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@color/myPrimaryColor"
            style="@style/AppTheme" />
            <TextView
                android:layout_width="5dp"
                android:layout_height="56dp" />
        <Button
            android:layout_width="153dp"
            android:layout_height="56dp"
            android:text="@string/register_text"
            android:id="@+id/image_btn"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@color/myPrimaryColor"
            style="@style/AppTheme" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_view"
                />
            </LinearLayout>
        ‏
</LinearLayout>
</RelativeLayout>
